--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,14 @@
 services:
   - type: web
     name: sistema-aprendizaje-autismo
+    env: docker
+    plan: free
+    dockerfilePath: Dockerfile
+    envVars:
+      - key: SECRET_KEY
+        generateValue: true 
+  - type: web
+    name: sistema-aprendizaje-autismo
     env: python
     rootDir: PROYECTO SISTEMAS
     plan: free
